--- a/style.css
+++ b/style.css
@@ -1,93 +1,74 @@
-		*{
- margin : 0;
- padding: 0;
- box-sizing: border-box;
+*{
+  margin:0; padding:0; box-sizing:border-box;
+}
+html, body{
+  height:100%;
+}
+body{
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  background:;
+  overflow:hidden;
 }
 
-
-body {
-    overflow: hidden;
-    margin: 0px;
-    height: 100%;
-    background-color: white;
+h1{
+  position:absolute;
+  height:100%;
+  z-index:-10;
+  margin-top:0;
+  display:block;
 }
 
-img {
-    position: absolute;
-    transform: translate(12.4%, 0%);
-    height: 100%;
-    margin-top: 0%;
-    top: 0%;
-    display: block;
-    z-index: -10;
+h1 img{
+  height:100%;
+  margin-top:0;
+  display:block;
+  top:0;
+  left:-50%;
 }
 
-.links a {
-  font-family: sans-serif;
-  font-size: 18pt;
-  color: red;
-  text-decoration: none;
-
-  white-space: nowrap;        /* 각 링크 내부 줄바꿈 방지 */
-  word-break: keep-all;       /* 한글 깨짐 방지 */
-
-  letter-spacing: 0px;
-
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-rendering: geometricPrecision;
+.container{
+  position:relative;
+  width:350px;
+  height:100%;
+  overflow:hidden;
+  background:;
 }
 
-.links a:last-child {
-  margin-right: 0;
-}
-.links a:link,
-.links a:visited,
-.links a:hover {
-  color: red;
-  text-decoration: none;
-}
-.links a:active {
-  color: black;
-}
-.links a:nth-child(1) {
-  margin-right: 600px;
-}
-.links a:nth-child(2) {
-  margin-right: 100px;
+.container::before{
+  content:"";
+  position:absolute;
+  inset:0;
+  background-repeat:no-repeat;
+  background-position:center center;
+  background-size:auto 100%; /* 세로 100%, 비율 고정, 옆 여백 그대로 */
+  z-index:0;
 }
 
-.links {
-  position: fixed;
-  bottom: 5px;
-  left: 50%;
-  transform: translateX(-30%);
+ul.boxes{
+  position:absolute;
+  left:0;
+  top:0;
+  width:350px;
+  display:flex;
+  flex-direction:column;
+  gap:800px;
+  padding:0;
+  z-index:1;
 
-  display: flex;              /* 핵심 */
-  flex-direction: row;
-  flex-wrap: nowrap;          /* 줄바꿈 금지 */
-  align-items: center;
-  justify-content: center;
-  gap: 0;                  /* 링크 간 간격 (margin 대신) */
-
-  white-space: nowrap;        /* 이중 안전장치 */
-  opacity: 1;
-
-  z-index: 999;
+  will-change: transform;
+  animation: scrollDown 150s linear infinite; /* 숫자↑ = 더 느림 */
+}
+ul.boxes li img{
+  width: 100%;
+  height: auto;
+  max-height: 100vh;     /* 화면 높이 넘으면 축소 */
+  object-fit: contain;
+  display: block;
 }
 
-@media screen and (max-width: 704px) {
-    
-img {
-   position: absolute;
-   line-height: 100%;
-   display: inline-block;
-   top: 0;
-   margin-right: auto;
-   margin-left: auto;
-}
-
-
-
-
+@keyframes scrollDown{
+  from{ transform: translate3d(0,-100%,0); }
+  to  { transform: translate3d(0, 100%,0); }
 }
